test/parsetest/valid/g5_arrays.java
class A {
  public void a() {
    
    /* array declaration */
    x[] y;
    
    /* array access */
    x[y];
    
  }
}
