test/parsetest/invalid/g5_whileElse.java
class A {
  public void a() {
  
    while (true) else ;
    
  }
}
